<?xml version="1.0"?>
<package format="3">
  <name>makimate_bringup</name>
  <version>0.0.1</version>
  <description>MakiMate bringup</description>
  <maintainer email="pourya.shahverdi@gmail.com">MakiMate Team</MakiMate>
  <license>Apache-2.0</license>

  <!-- Python build tool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime deps -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
